调整项目配置文件

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,4 @@
-dauth.driver=com.mysql.jdbc.Driver
-dauth.url=jdbc:mysql://@db_instance_ad@?@params@
-dauth.user=@db_username_ad@
-dauth.passwd=@db_password_ad@
-
-uis.server.host=@uis_server_host@
-uis.server.port=@uis_server_port@
-
-asn.server.instance=@asn_server_instance@
+tonysys.driver=com.mysql.jdbc.Driver
+tonysys.url=jdbc:mysql://@db_instance_ad@?@params@
+tonysys.user=@db_username_ad@
+tonysys.passwd=@db_password_ad@
