添加页面文件

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,6 +37,6 @@
 
     <servlet-mapping>
         <servlet-name>tonysys</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/admin/*</url-pattern>
     </servlet-mapping>
 </web-app>
