--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -1,6 +1,6 @@
 params=autoCommit=true&autoReconnect=true&useUnicode=true&tinyInt1isBit=false&zeroDateTimeBehavior=round&characterEncoding=UTF-8&yearIsDateType=false&zeroDateTimeBehavior=convertToNull
 
-db_instance_ad=10.10.32.194:3323/DB_TONYSYS
-db_username_ad=adsol
-db_password_ad=adsol-13
+db_instance_ad=localhost:3306/DB_TONYSYS
+db_username_ad=root
+db_password_ad=root
 
