--- a/src/main/filters/filter-test.properties
+++ b/src/main/filters/filter-test.properties
@@ -1,5 +1,5 @@
 params=autoCommit=true&autoReconnect=true&useUnicode=true&tinyInt1isBit=false&zeroDateTimeBehavior=round&characterEncoding=UTF-8&yearIsDateType=false&zeroDateTimeBehavior=convertToNull
 
-db_instance_ad=192.168.10.10:3306/DB_TONYSYS
-db_username_ad=recruit
-db_password_ad=uc1q2w3e4r
+db_instance_ad=localhost:3306/DB_TONYSYS
+db_username_ad=root
+db_password_ad=root
