--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,18 @@
         <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <!--<filter>-->
+        <!--<filter-name>loginFilter</filter-name>-->
+        <!--<filter-class>com.tonysys.filter.LoginFilter</filter-class>-->
+        <!--<init-param>-->
+            <!--<param-name>excludeURL</param-name>-->
+            <!--<param-value>/login.jsp,/about.jsp,/contactUs.jsp,/resource/**,/admin/login*,/admin/login/**</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>loginFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
     <servlet>
         <servlet-name>tonysys</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
